fixed font sizes on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -218,4 +218,8 @@ li {
   h1 {
     font-size: 3rem;
   }
+  p,
+  li {
+    font-size: 2em;
+  }
 }
